2009-07-20  Ingo Renner  <ingo@typo3.org>

	* Added feature #11264: Add an opacity option to the GIFBUILDER BOX object

2009-07-20  Oliver Hader  <oliver@typo3.org>

	* Added feature #11509: Move automatic session data garbage collection to separate method

2009-07-19  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #6875: IRRE - Sorting of child records is inverted on moving parent record to different page (thanks to Nabil Saleh)
	* Fixed bug #11267: Use PHP5 version of function microtime()

2009-07-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11556: missing quotes in loginrefresh.js

2009-07-16  Steffen Kamper  <info@sk-typo3.de>

	* Added feature #9808: Popup-functionality for Pages using target field

2009-07-16  Christian Kuhn  <lolli@schwarzbu.ch>

	* Added feature #11544: select/deselect all checkbox in db compare tool and extension manager for each type of modification

2009-07-16  Francois Suter  <francois@typo3.org>

	* Bug #11249: Abusive deprecation logging in tslib_content::getData()

2009-07-15  Francois Suter  <francois@typo3.org>

	* Cleanup #11408: Object Browser uses hardcoded texts (plus some CGL cleanup) (thanks to Christopher Stelmaszyk)

2009-07-15  Oliver Hader  <oliver@typo3.org>

	* Added feature #11510: Store timestamp of last modification of session data to frontend user object

2009-07-14  Oliver Hader  <oliver@typo3.org>

	* Added feature #11508: Integrate possibility to define lifetime of frontend session data
	* Fixed bug #11526: Hanging record sets in tslib_feUserAuth

2009-07-12  Ingo Renner  <ingo@typo3.org>

	* Resolved issue #11530: Replaced t3lib_div::GParrayMerged() with new method t3lib_div::_GPmerged()

2009-07-08  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11379: TStemplate Info/Modify uses hardcoded texts (Thanx to Christopher Stelmaszyk)

2009-07-09  Martin Kutschker  <masi@typo3.org>

	* Fixed bug: same error message is used twice for different errors

2009-07-09  Ingo Renner  <ingo@typo3.org>
