@@ -1,3 +1,7 @@
+2009-07-22  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #11566: Missing css for grouping grid collapse/expand (ExtJS)
+
 2009-07-20  Ingo Renner  <ingo@typo3.org>
 
 	* Added feature #11264: Add an opacity option to the GIFBUILDER BOX object
